# fastmdlint

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  TODOS.md
.github/workflows/: ci.yml
bench/: bench.sh
docs/: ARCHITECTURE.md
examples/: .markdownlint.json  sample.md
src/: config.rs  fix.rs  lib.rs  linter.rs  main.rs  output.rs  runner.rs
src/md/: mod.rs  parser.rs  tokens.rs
src/rules/: helpers.rs  md001.rs  md003.rs  md004.rs  md005.rs  md007.rs  md009.rs  md010.rs  md011.rs  md012.rs  md013.rs  md014.rs  md018.rs  md019.rs  md020.rs  md022.rs  md023.rs  md024.rs  md025.rs  md026.rs  md027.rs  md028.rs  md029.rs  md030.rs  md031.rs  md032.rs  md033.rs  md034.rs  md035.rs  md036.rs  md037.rs  md038.rs  md039.rs  md040.rs  md041.rs  md042.rs  md043.rs  md044.rs  md045.rs  md046.rs  (+14 more)
tests/: lint_test.rs  only-implemented.json  parity.sh
tests/corpus/: CustomRules.md  Rules.md  bq_lists.md  inline1.md  kitchensink.md  lists_nested.md  md001.md  md011.md  md020_closed.md  md022.md  md025.md  md026.md  md028.md  md028_bq.md  md034.md  md035.md  md041.md  md042.md  md045.md  md060.md  mdlint-readme.md  messy1.md  messy2.md  messy3.md  refs_undefined.md  tables1.md
