[package]
name = "fastmdlint"
version = "0.1.0"
edition = "2024"
description = "A fast, drop-in replacement for markdownlint-cli written in Rust"
license = "MIT"
authors = ["fastmdlint Contributors"]
repository = "https://github.com/xavierhardy/fastmdlint"
keywords = ["linter", "markdown", "markdownlint", "lint", "formatter"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
toml = "1"
rayon = "1.10"
regex = "1"
walkdir = "2"
ignore = "0.4"
globset = "0.4"
similar = "2"
unicode-width = "0.2.2"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"

[profile.release]
lto = true
codegen-units = 1

[[bin]]
name = "fastmdlint"
path = "src/main.rs"

[lib]
name = "fastmdlint"
path = "src/lib.rs"
